# pocket

./: .gitignore  Cargo.toml
models/: Cargo.toml
models/src/: bet.rs  character.rs  lib.rs  meal.rs  navigation.rs  pedometer.rs  rice_ball.rs  router.rs  shuriken.rs  target.rs
pocket/: Cargo.toml
pocket/.cargo/: config
pocket/src/: main.rs
pocket/src/assets/game/: empty_target.raw  target.raw
pocket/src/assets/navigation/: home.raw  meal.raw
pocket/src/controllers/: navigation_view_controller.rs  page_controller.rs  pedometer_view_controller.rs
pocket/src/controllers/pages/: game_page_controller.rs  meal_page_controller.rs  play_page_controller.rs
pocket/src/helpers/: image.rs  screen.rs
pocket/src/views/: navigation_view.rs
pocket/src/views/pages/: fail_page.rs  game_page.rs  meal_page.rs  play_page.rs  success_page.rs  throw_page.rs
src/: character.rs  character_image.rs  food.rs  helper.rs  main.rs  meal.rs  navigation.rs  pedometer.rs  rice_ball.rs  router.rs  screen.rs
src/assets/character/away/: default.raw
src/assets/character/eat/: default.raw
src/assets/navigation/: clock.raw  play.raw
src/controllers/: navigation_view_controller.rs  page_controller.rs  pedometer_view_controller.rs
src/controllers/pages/: home_page_controller.rs  meal_page_controller.rs  play_page_controller.rs
src/helpers/: character_image.rs  image.rs  screen.rs
src/models/: character.rs  navigation.rs
src/views/: navigation_view.rs  pedometer_view.rs
src/views/pages/: eat_page.rs  home_page.rs  meal_page.rs  play_page.rs
(+5 files in other folders)
